@@ -1,17 +1,17 @@
 object Form1: TForm1
   Left = 391
-  Height = 234
+  Height = 260
   Top = 158
   Width = 544
   Caption = 'WIA Demos'
-  ClientHeight = 234
+  ClientHeight = 260
   ClientWidth = 544
   LCLVersion = '3.99.0.0'
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   object Memo2: TMemo
     Left = 0
-    Height = 224
+    Height = 247
     Top = 8
     Width = 416
     ScrollBars = ssAutoBoth
@@ -44,28 +44,19 @@ object Form1: TForm1
   object btIntCap: TButton
     Left = 416
     Height = 25
-    Top = 104
+    Top = 176
     Width = 123
     Caption = 'List Capabilities'
     TabOrder = 3
     OnClick = btIntCapClick
   end
-  object btListChilds: TButton
-    Left = 416
-    Height = 25
-    Top = 136
-    Width = 123
-    Caption = 'List Childs'
-    TabOrder = 4
-    OnClick = btListChildsClick
-  end
   object btDownload: TButton
     Left = 416
     Height = 25
-    Top = 168
+    Top = 208
     Width = 123
     Caption = 'Download'
-    TabOrder = 5
+    TabOrder = 4
     OnClick = btDownloadClick
   end
   object btSelect: TButton
@@ -74,21 +65,44 @@ object Form1: TForm1
     Top = 40
     Width = 123
     Caption = 'Select Device'
-    TabOrder = 6
+    TabOrder = 5
     OnClick = btSelectClick
   end
-  object edSelItemName: TEdit
-    Left = 432
-    Height = 23
-    Top = 208
-    Width = 107
-    TabOrder = 7
-  end
   object Label2: TLabel
-    Left = 432
+    Left = 419
     Height = 15
-    Top = 192
-    Width = 59
-    Caption = 'from Item :'
+    Top = 128
+    Width = 66
+    Caption = 'Item to Use :'
+  end
+  object edSelItemName: TEdit
+    Left = 419
+    Height = 23
+    Top = 144
+    Width = 123
+    TabOrder = 6
+  end
+  object btListChilds: TButton
+    Left = 416
+    Height = 25
+    Top = 96
+    Width = 123
+    Caption = 'List Childs'
+    TabOrder = 7
+    OnClick = btListChildsClick
+  end
+  object edDPI: TEdit
+    Left = 440
+    Height = 23
+    Top = 232
+    Width = 47
+    TabOrder = 8
+  end
+  object Label3: TLabel
+    Left = 416
+    Height = 15
+    Top = 232
+    Width = 17
+    Caption = 'dpi'
   end
 end
